--- a/Disk/3 Disks.ini
+++ b/Disk/3 Disks.ini
@@ -44,7 +44,7 @@ colorBar=235,170,0,255
 colorText=255,255,255,205
 disk1=C:
 disk2=G:
-disk3=Y:
+disk3=W:
 
 ; ----------------------------------
 ; MEASURES return some kind of value
@@ -82,12 +82,12 @@ InvertMeasure=1
 Measure=FreeDiskSpace
 Drive=#disk2#
 
-[measureTotalDisk2]
+[measureTotalDisk3]
 Measure=FreeDiskSpace
 Drive=#disk3#
 Total=1
 
-[measureUsedDisk2]
+[measureUsedDisk3]
 Measure=FreeDiskSpace
 Drive=#disk3#
 InvertMeasure=1
