--- a/Google/Google.ini
+++ b/Google/Google.ini
@@ -4,11 +4,11 @@
 
 [Rainmeter]
 ; This section contains general settings that can be used to change how Rainmeter behaves.
-Update=1000
-Background=#@#Background.png
+Update=10000
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
-BackgroundMode=3
-BackgroundMargins=0,34,0,14
+;Background=#@#Background.png
+;BackgroundMode=3
+;BackgroundMargins=0,34,0,14
 
 [Metadata]
 ; Contains basic information of the skin.
@@ -20,8 +20,8 @@ Version=1.0.0
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
-fontName=Trebuchet MS
-textSize=8
+;fontName=Trebuchet MS
+textSize=12
 colorBar=235,170,0,255
 colorText=255,255,255,205
 
@@ -38,16 +38,16 @@ Plugin=InputText.dll
 SolidColor=20,20,20,255
 StringAlign=Left
 StringCase=None
-StringStyle=Bold
+;StringStyle=Bold
 StringEffect=Shadow
 FontEffectColor=0,0,0,20
 FontColor=#colorText#
 FontFace=#fontName#
 FontSize=#textSize#
 X=10
-Y=38
-W=188
-H=17
+Y=10
+W=360
+H=20
 FocusDismiss=1
 DefaultValue=""
 Command1=["http://www.google.com/search?q=$UserInput$"]
@@ -58,8 +58,8 @@ UpdateDivider=86400
 ; ----------------------------------
 
 [styleTitle]
-StringAlign=Center
-StringCase=Upper
+StringAlign=Right
+;StringCase=Upper
 StringStyle=Bold
 StringEffect=Shadow
 FontEffectColor=0,0,0,50
@@ -89,31 +89,31 @@ SolidColor=255,255,255,15
 ; METERS display images, text, bars, etc.
 ; ----------------------------------
 
-[meterTitle]
-Meter=String
-MeterStyle=styleTitle
-; Using MeterStyle=styleTitle will basically "copy" the
-; contents of the [styleTitle] section here during runtime.
-X=100
-Y=12
-W=190
-H=18
-Text=Google
+;[meterTitle]
+;Meter=String
+;MeterStyle=styleTitle
+;; Using MeterStyle=styleTitle will basically "copy" the
+;; contents of the [styleTitle] section here during runtime.
+;X=300
+;Y=10
+;W=60
+;H=14
+;Text=Google
 
 [meterSearch]
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=40
-W=190
-H=14
+Y=10
+W=360
+H=34
 Text=Search...
 LeftMouseUpAction=[!CommandMeasure measureInput "ExecuteBatch 1"]
 
-[meterSeperator]
-Meter=Image
-MeterStyle=styleSeperator
-X=10
-Y=52
-W=190
-H=1
+;[meterSeperator]
+;Meter=Image
+;MeterStyle=styleSeperator
+;X=10
+;Y=52
+;W=360
+;H=1
