--- a/PerfMon/4 Disk PerfMon.ini
+++ b/PerfMon/4 Disk PerfMon.ini
@@ -27,7 +27,7 @@ colorBar=235,170,0,255
 colorText=255,255,255,205
 disk1=C:
 disk2=G:
-disk3=P:
+disk3=W:
 disk4=Y:
 
 ; ----------------------------------
