Created new model using @Includes and new meters

--- a/Disk/2 Disks.ini
+++ b/Disk/2 Disks.ini
@@ -21,7 +21,7 @@
 
 [Rainmeter]
 ; This section contains general settings that can be used to change how Rainmeter behaves.
-Update=1000
+Update=2500
 Background=#@#Background.png
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
 BackgroundMode=3
@@ -43,7 +43,7 @@ textSize=8
 colorBar=235,170,0,255
 colorText=255,255,255,205
 disk1=C:
-disk2=G:
+disk2=E:
 
 ; ----------------------------------
 ; MEASURES return some kind of value
