--- a/Disk/3 Disks.ini
+++ b/Disk/3 Disks.ini
@@ -44,7 +44,7 @@ colorBar=235,170,0,255
 colorText=255,255,255,205
 disk1=C:
 disk2=G:
-disk3=W:
+disk3=P:
 
 ; ----------------------------------
 ; MEASURES return some kind of value
