--- a/PerfMon/4 Disk PerfMon.ini
+++ b/PerfMon/4 Disk PerfMon.ini
@@ -4,7 +4,7 @@
 
 [Rainmeter]
 ; This section contains general settings that can be used to change how Rainmeter behaves.
-Update=1000
+Update=2500
 Background=#@#Background.png
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
 BackgroundMode=3
@@ -26,9 +26,12 @@ textSize=8
 colorBar=235,170,0,255
 colorText=255,255,255,205
 disk1=C:
-disk2=G:
-disk3=W:
-disk4=Y:
+disk2=E:
+; disk3=H:
+; disk4=Y:
+
+; Styles
+@IncludeStyles=#@#Styles.inc
 
 ; ----------------------------------
 ; MEASURES return some kind of value
@@ -78,51 +81,6 @@ PerfMonCounter=Disk Bytes/sec
 PerfMonInstance=#disk4#
 PerfMonDifference=1
 
-; ----------------------------------
-; STYLES are used to "centralize" options
-; ----------------------------------
-
-[styleTitle]
-StringAlign=Center
-StringCase=Upper
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,50
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
-
-[styleLeftText]
-StringAlign=Left
-; Meters using styleLeftText will be left-aligned.
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=#textSize#
-AntiAlias=1
-ClipString=1
-
-[styleRightText]
-StringAlign=Right
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=#textSize#
-AntiAlias=1
-ClipString=1
-
-[styleBar]
-BarColor=#colorBar#
-BarOrientation=HORIZONTAL
-SolidColor=255,255,255,15
 
 ; ----------------------------------
 ; METERS display images, text, bars, etc.
@@ -199,43 +157,43 @@ H=14
 AutoScale=1
 Text=%1B/sec
 
-[meterLabelDisk3]
-Meter=String
-MeterStyle=styleLeftText
-X=10
-Y=100
-W=190
-H=14
-Text=#disk3#\
+; [meterLabelDisk3]
+; Meter=String
+; MeterStyle=styleLeftText
+; X=10
+; Y=100
+; W=190
+; H=14
+; Text=#disk3#\
 
-[MeterValueDisk3]
-Meter=String
-MeterStyle=styleRightText
-MeasureName=MeasureDiskAccess3
-X=200
-Y=0r
-W=190
-H=14
-AutoScale=1
-Text=%1B/sec
+; [MeterValueDisk3]
+; Meter=String
+; MeterStyle=styleRightText
+; MeasureName=MeasureDiskAccess3
+; X=200
+; Y=0r
+; W=190
+; H=14
+; AutoScale=1
+; Text=%1B/sec
 
-[meterLabelDisk4]
-Meter=String
-MeterStyle=styleLeftText
-X=10
-Y=120
-W=190
-H=14
-Text=#disk4#\
+; [meterLabelDisk4]
+; Meter=String
+; MeterStyle=styleLeftText
+; X=10
+; Y=120
+; W=190
+; H=14
+; Text=#disk4#\
 
-[MeterValueDisk4]
-Meter=String
-MeterStyle=styleRightText
-MeasureName=MeasureDiskAccess4
-X=200
-Y=0r
-W=190
-H=14
-AutoScale=1
-Text=%1B/sec
+; [MeterValueDisk4]
+; Meter=String
+; MeterStyle=styleRightText
+; MeasureName=MeasureDiskAccess4
+; X=200
+; Y=0r
+; W=190
+; H=14
+; AutoScale=1
+; Text=%1B/sec
 
