--- a/Network/Network.ini
+++ b/Network/Network.ini
@@ -4,7 +4,7 @@
 
 [Rainmeter]
 ; This section contains general settings that can be used to change how Rainmeter behaves.
-Update=1000
+Update=2500
 Background=#@#Background.png
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
 BackgroundMode=3
@@ -35,13 +35,14 @@ MaxUpload=10485760
 ; ----------------------------------
 
 [measureIP]
-; This measure returns your IP. WebParser measures are relatively complicated. If you're a beginner with
+; This measure returns your IPv4 address. WebParser measures are relatively complicated. If you're a beginner with
 ; Rainmeter, take a look at some of the other illustro skins before modifying this one.
+; For more information, go here: https://docs.rainmeter.net/tips/ipaddress
 Measure=Plugin
 Plugin=WebParser
-Url=http://checkip.dyndns.org
+URL=https://checkip.amazonaws.com/
 UpdateRate=14400
-RegExp=(?siU)Address: (.*)</body>
+RegExp=(?siU)^(.*)$
 StringIndex=1
 Substitute="":"N/A"
 ; Substitute works as follows: "A":"B" where A is a string to substitute and B is a string
@@ -129,7 +130,7 @@ X=10
 Y=40
 W=190
 H=14
-Text=External IP
+Text=IP Address
 
 [meterIPValue]
 Meter=String
