--- a/System/System.ini
+++ b/System/System.ini
@@ -1,22 +1,16 @@
-; Lines starting ; (semicolons) are commented out.
-; That is, they do not affect the code and are here for demonstration purposes only.
-; ----------------------------------
-
 [Rainmeter]
-; This section contains general settings that can be used to change how Rainmeter behaves.
-Update=1000
+Update=2500
 Background=#@#Background.png
 ; #@# is equal to Rainmeter\Skins\illustro\@Resources
 BackgroundMode=3
 BackgroundMargins=0,34,0,14
 
 [Metadata]
-; Contains basic information of the skin.
 Name=System
-Author=poiru
+Author=mmitsialis
 Information=Displays basic system stats.
 License=Creative Commons BY-NC-SA 3.0
-Version=1.0.0
+Version=0.1.0
 
 [Variables]
 ; Variables declared here can be used later on between two # characters (e.g. #MyVariable#).
@@ -25,14 +19,28 @@ textSize=8
 colorBar=235,170,0,255
 colorText=255,255,255,205
 
+; Styles
+@IncludeStyles=#@#Styles.inc
+
+
+
 ; ----------------------------------
 ; MEASURES return some kind of value
 ; ----------------------------------
 
-[measureCPU]
+[measureCPU1]
 ; This measure returns the average CPU load between all cores.
 Measure=CPU
 Processor=0
+IfCondition=MeasureCPU > 80
+IfTrueAction=[!SetOption meterValueCPU FontColor "255,0,0"]
+IfFalseAction=[!SetOption meterValueCPU FontColor "0,255,0"]
+UpdateDivider=5
+
+[measureCPU2]
+; This measure returns the average CPU load between all cores.
+Measure=CPU
+Processor=1
 IfCondition=MeasureCPU > 80
 IfTrueAction=[!SetOption meterValueCPU FontColor "255,0,0"]
 IfFalseAction=[!SetOption meterValueCPU FontColor "0,255,0"]
@@ -49,57 +57,31 @@ IfCondition=measureRAM > 75
 IfTrueAction=[!SetOption meterValueRAM FontColor "255,0,0"]
 IfFalseAction=[!SetOption meterValueRAM FontColor "0,255,0"]
 
-
 [measureSWAP]
 ; Returns the amount of SWAP (pagefile) used in bytes.
 Measure=SwapMemory
 UpdateDivider=20
+IfCondition=measureSWAP > 75
+IfTrueAction=[!SetOption meterValueSWAP FontColor "255,0,0"]
+IfFalseAction=[!SetOption meterValueSWAP FontColor "0,255,0"]
 
-; ----------------------------------
-; STYLES are used to "centralize" options
-; ----------------------------------
+[MeasureTopGPU]
+Measure=Plugin
+Plugin=UsageMonitor
+Alias=GPU
+; UpdateDivider=20
+Index=1
+MinValue=0
+MaxValue=100
+Blacklist=dwm|csrss
 
-[styleTitle]
-StringAlign=Center
-StringCase=Upper
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,50
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=10
-AntiAlias=1
-ClipString=1
+[MeasureTotalThreads]
+Measure=Plugin
+Plugin=UsageMonitor
+Category=System
+Counter=Threads
+Index=0
 
-[styleLeftText]
-StringAlign=Left
-; Meters using styleLeftText will be left-aligned.
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=#textSize#
-AntiAlias=1
-ClipString=1
-
-[styleRightText]
-StringAlign=Right
-StringCase=None
-StringStyle=Bold
-StringEffect=Shadow
-FontEffectColor=0,0,0,20
-FontColor=#colorText#
-FontFace=#fontName#
-FontSize=#textSize#
-AntiAlias=1
-ClipString=1
-
-[styleBar]
-BarColor=#colorBar#
-BarOrientation=HORIZONTAL
-SolidColor=255,255,255,15
 
 ; ----------------------------------
 ; METERS display images, text, bars, etc.
@@ -110,8 +92,9 @@ Meter=String
 MeterStyle=styleTitle
 ; Using MeterStyle=styleTitle will basically "copy" the
 ; contents of the [styleTitle] section here during runtime.
+; X=(#SCREENAREAWIDTH#-200)
 X=100
-Y=12
+Y=10
 W=190
 H=18
 Text=System
@@ -122,19 +105,19 @@ LeftMouseUpAction=["taskmgr.exe"]
 ToolTipText=Open Task Manager
 ; Hovering over this meter will display a tooltip with the text above.
 
-[meterLabelCPU]
+[meterLabelCPU1]
 Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=40
 W=190
 H=14
-Text=CPU Usage
+Text=CPU Usage #1
 
-[meterValueCPU]
+[meterValueCPU1]
 Meter=String
 MeterStyle=styleRightText
-MeasureName=measureCPU
+MeasureName=measureCPU1
 X=200
 Y=0r
 ; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
@@ -144,12 +127,44 @@ H=14
 Text=%1%
 ; %1 stands for the value of MeasureName (measureCPU in this case).
 
-[meterBarCPU]
+[meterBarCPU1]
 Meter=Bar
 MeterStyle=styleBar
-MeasureName=measureCPU
+MeasureName=measureCPU1
 X=10
 Y=52
+W=190
+H=1
+
+[meterLabelCPU2]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+; Y=60
+Y=8r
+W=190
+H=14
+Text=CPU Usage #2
+
+[meterValueCPU2]
+Meter=String
+MeterStyle=styleRightText
+MeasureName=measureCPU2
+X=200
+Y=0r
+; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
+; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
+W=190
+H=14
+Text=%1%
+; %1 stands for the value of MeasureName (measureCPU in this case).
+
+[meterBarCPU2]
+Meter=Bar
+MeterStyle=styleBar
+MeasureName=measureCPU1
+X=10
+Y=72
 W=190
 H=1
 
@@ -157,7 +172,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=60
+Y=8r
 W=190
 H=14
 Text=RAM Usage
@@ -180,7 +195,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureRAM
 X=10
-Y=72
+Y=92
 W=190
 H=1
 
@@ -188,7 +203,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=80
+Y=8r
 W=190
 H=14
 Text=SWAP Usage
@@ -209,6 +224,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureSWAP
 X=10
-Y=92
+Y=112
 W=190
 H=1
+
