Refactor:  Optimised the includes file for meters and measures Update: Updated panel to cater for quad cor CPU for new Dynabook Satellite Pro

--- a/System/System.ini
+++ b/System/System.ini
@@ -46,6 +46,25 @@ IfTrueAction=[!SetOption meterValueCPU FontColor "255,0,0"]
 IfFalseAction=[!SetOption meterValueCPU FontColor "0,255,0"]
 UpdateDivider=5
 
+[measureCPU3]
+; This measure returns the average CPU load between all cores.
+Measure=CPU
+Processor=2
+IfCondition=MeasureCPU > 80
+IfTrueAction=[!SetOption meterValueCPU FontColor "255,0,0"]
+IfFalseAction=[!SetOption meterValueCPU FontColor "0,255,0"]
+UpdateDivider=5
+
+[measureCPU4]
+; This measure returns the average CPU load between all cores.
+Measure=CPU
+Processor=3
+IfCondition=MeasureCPU > 80
+IfTrueAction=[!SetOption meterValueCPU FontColor "255,0,0"]
+IfFalseAction=[!SetOption meterValueCPU FontColor "0,255,0"]
+UpdateDivider=5
+
+
 [measureRAM]
 ; Returns the amount of RAM used in bytes.
 Measure=PhysicalMemory
@@ -65,6 +84,7 @@ IfCondition=measureSWAP > 75
 IfTrueAction=[!SetOption meterValueSWAP FontColor "255,0,0"]
 IfFalseAction=[!SetOption meterValueSWAP FontColor "0,255,0"]
 
+
 [MeasureTopGPU]
 Measure=Plugin
 Plugin=UsageMonitor
@@ -74,6 +94,7 @@ Index=1
 MinValue=0
 MaxValue=100
 Blacklist=dwm|csrss
+
 
 [MeasureTotalThreads]
 Measure=Plugin
@@ -128,11 +149,11 @@ Text=%1%
 ; %1 stands for the value of MeasureName (measureCPU in this case).
 
 [meterBarCPU1]
+MeasureName=measureCPU1
 Meter=Bar
 MeterStyle=styleBar
-MeasureName=measureCPU1
 X=10
-Y=52
+Y=12r
 W=190
 H=1
 
@@ -140,16 +161,15 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-; Y=60
 Y=8r
 W=190
 H=14
 Text=CPU Usage #2
 
 [meterValueCPU2]
+MeasureName=measureCPU2
 Meter=String
 MeterStyle=styleRightText
-MeasureName=measureCPU2
 X=200
 Y=0r
 ; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
@@ -162,11 +182,74 @@ Text=%1%
 [meterBarCPU2]
 Meter=Bar
 MeterStyle=styleBar
-MeasureName=measureCPU1
+MeasureName=measureCPU2
 X=10
-Y=72
+Y=12r
 W=190
 H=1
+
+[meterLabelCPU3]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+Y=8r
+W=190
+H=14
+Text=CPU Usage #3
+
+[meterValueCPU3]
+MeasureName=measureCPU3
+Meter=String
+MeterStyle=styleRightText
+X=200
+Y=0r
+; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
+; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
+W=190
+H=14
+Text=%1%
+; %1 stands for the value of MeasureName (measureCPU in this case).
+
+[meterBarCPU3]
+Meter=Bar
+MeterStyle=styleBar
+MeasureName=measureCPU3
+X=10
+Y=12r
+W=190
+H=1
+
+[meterLabelCPU4]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+Y=8r
+W=190
+H=14
+Text=CPU Usage #4
+
+[meterValueCPU4]
+MeasureName=measureCPU4
+Meter=String
+MeterStyle=styleRightText
+X=200
+Y=0r
+; r stands for relative. In this case, the Y position of meterValueCPU is 0 pixels
+; below the Y value of the previous meter (i.e it's the same as in meterLabelCPU).
+W=190
+H=14
+Text=%1%
+; %1 stands for the value of MeasureName (measureCPU in this case).
+
+[meterBarCPU4]
+Meter=Bar
+MeterStyle=styleBar
+MeasureName=measureCPU4
+X=10
+Y=12r
+W=190
+H=1
+
 
 [meterLabelRAM]
 Meter=String
@@ -195,7 +278,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureRAM
 X=10
-Y=92
+Y=12r
 W=190
 H=1
 
@@ -224,7 +307,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=measureSWAP
 X=10
-Y=112
+Y=12r
 W=190
 H=1
 
