--- a/System/System_Full.ini
+++ b/System/System_Full.ini
@@ -33,10 +33,10 @@ colorText=255,255,255,205
 @includeMeasure1=Measures-System.inc
 @includeMeasure2=Measures-GPU.inc
 @includeMeasure3=Measures-Threads.inc
-@includeMeasure4=Measures-Top3_IO_Read.inc
-@includeMeasure5=Measures-Top3_IO_Write.inc
-@includeMeasure6=Measures-Top5_IO_Read.inc
-@includeMeasure7=Measures-Top5_IO_Write.inc
+;@includeMeasure4=Measures-Top3_IO_Read.inc
+;@includeMeasure5=Measures-Top3_IO_Write.inc
+;@includeMeasure6=Measures-Top5_IO_Read.inc
+;@includeMeasure7=Measures-Top5_IO_Write.inc
 
 ; ----------------------------------
 ; METERS display images, text, bars, etc.
@@ -60,12 +60,12 @@ LeftMouseUpAction=["taskmgr.exe"]
 ToolTipText=Open Task Manager
 ; Hovering over this meter will display a tooltip with the text above.
 
-@includeMeters1=Meters-System.inc
+@includeMetfers1=Meters-System.inc
 @includeMeters2=Meters-GPU.inc
 @includeMeters3=Meters-Threads.inc
-@includeMeters4=Meters-Top3_IO_Read.inc
-@includeMeters5=Meters-Top5_IO_Read.inc
-@includeMeters6=Meters-Top3_IO_Write.inc
-@includeMeters7=Meters-Top5_IO_Write.inc
+;@includeMeters4=Meters-Top3_IO_Read.inc
+;@includeMeters5=Meters-Top5_IO_Read.inc
+;@includeMeters6=Meters-Top3_IO_Write.inc
+;@includeMeters7=Meters-Top5_IO_Write.inc
 
 
